--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/material-bottom-tabs": "^5.3.14",
     "@react-navigation/native": "^5.9.3",
     "@react-navigation/stack": "^5.14.3",
+    "email-validator": "^2.0.4",
     "expo": "~40.0.0",
     "expo-constants": "~9.3.3",
     "expo-status-bar": "~1.0.3",
