--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "email-validator": "^2.0.4",
     "expo": "~40.0.0",
     "expo-constants": "~9.3.3",
+    "expo-splash-screen": "~0.8.1",
     "expo-status-bar": "~1.0.3",
     "firebase": "7.9.0",
     "react": "16.13.1",
