--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "expo-splash-screen": "~0.8.1",
     "expo-status-bar": "~1.0.3",
     "firebase": "7.9.0",
+    "infinite-react-carousel": "^1.2.11",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-elastic-carousel": "^0.11.4",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-elements": "^3.2.0",
     "react-native-gesture-handler": "~1.8.0",
